<resources>
    <string name="app_name">Buscaminas</string>
    <string name="Help">Ayuda</string>
    <string name="StartGame">Empezar Partida</string>
    <string name="Leave">Salir</string>
    <string name="configuration">Configuración</string>
    <string name="welcome">¡Bienvenido al juego del BUSCAMINAS!</string>
    <string name="howToPlay1">El juego consiste en despejar todas las casillas de una parrilla que no oculten una mina.</string>
    <string name="howToPlay2">Algunas casillas tienen un número, el cual indica las minas que suman todas las casillas circundantes. Así, si una casilla tiene el numero 3, significa que de las ocho casillas que hay alrededor (si no es una esquina o un borde) hay 3 con minas y 5 sin.</string>
    <string name="howToPlay3">Si se descubre una casilla con una mina, SE PIERDE la partida. Por el contrario, si descubres todas las casillas sin mina, ¡GANAS!</string>
    <string name="howToPlay4">Puedes configurar el número de filas de una parrilla, el porcentaje de minas en la misma y si quieres que haya un tiempo máximo para completar el juego</string>
    <string name="backToGame">Ir al juego</string>
    <string name="alias">Alias identificativo</string>
    <string name="gridSize">Tamaño cuadrícula</string>
    <string name="time">Control del tiempo</string>
    <string name="minas">Porcentaje de minas</string>
    <string name="start">Empezar</string>
    <string name="apply">Aplicar</string>
    <string name="difficulty1">15</string>
    <string name="difficulty2">20</string>
    <string name="difficulty3">25</string>
    <string name="difficulty4">30</string>
    <string name="gridSize1">5</string>
    <string name="gridSize2">6</string>
    <string name="gridSize3">7</string>
    <string name="gridSize4">8</string>
    <string name="email">ejemplo@ejemplo.es</string>
    <string name="ver_mapa">VER MAPA</string>
    <string name="ver_resultados">Ver resultados</string>
    <string name="e_mail_destinatario">E-mail destinatario</string>
    <string name="valores_del_log">Valores del Log</string>
    <string name="d_a_y_hora">Día y Hora</string>
    <string name="salir">Salir</string>
    <string name="nueva_partida">Nueva partida</string>
    <string name="enviar_e_mail">Enviar e-mail</string>
    <string name="menu_principal">Menú principal</string>
    <string name="visualizar_lista">Visualizar lista</string>
    <string name="consultar_partidas">Consultar Partidas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info">Info</string>
    <string name="atr_s">atrás</string>
    <string name="buscar">Buscar</string>
    <string name="eliminar">Eliminar</string>
</resources>