<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232120"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="0dp">

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="#00FFFFFF"
        android:gravity="center_vertical"
        android:text="@string/alias"
        android:textColor="@color/design_default_color_secondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:shadowColor="@color/design_default_color_secondary"
        android:textColor="@color/design_default_color_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <ImageView
        android:id="@+id/gridImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22"
        app:srcCompat="@drawable/grid" />

    <ImageView
        android:id="@+id/timeImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406"
        app:srcCompat="@drawable/time" />

    <ImageView
        android:id="@+id/bombImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593"
        app:srcCompat="@drawable/mine" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/gridSize"
        android:textColor="@color/design_default_color_secondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <RadioGroup
        android:id="@+id/radioGroupGrid"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305">

        <RadioButton
            android:id="@+id/radioButtonTC5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gridSize1"
            android:textColor="@color/design_default_color_secondary" />

        <RadioButton
            android:id="@+id/radioButtonTC6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gridSize2"
            android:textColor="@color/design_default_color_secondary" />

        <RadioButton
            android:id="@+id/radioButtonTC7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gridSize3"
            android:textColor="@color/design_default_color_secondary"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="350dp" />
        <RadioButton
            android:id="@+id/radioButtonTC8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gridSize4"
            android:textColor="@color/design_default_color_secondary"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="350dp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupBomb"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.685">

        <RadioButton
            android:id="@+id/radioButtonPM15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty1"
            android:textColor="@color/design_default_color_secondary" />

        <RadioButton
            android:id="@+id/radioButtonPM20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty2"
            android:textColor="@color/design_default_color_secondary" />

        <RadioButton
            android:id="@+id/radioButtonPM25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty3"
            android:textColor="@color/design_default_color_secondary"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="350dp" />
        <RadioButton
            android:id="@+id/radioButtonPM30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty4"
            android:textColor="@color/design_default_color_secondary"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="350dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/time"
        android:textColor="@color/design_default_color_secondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/minas"
        android:textColor="@color/design_default_color_secondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/apply"
        android:textColor="@color/design_default_color_secondary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        style="?attr/materialButtonOutlinedStyle"
        android:textColor="@color/design_default_color_secondary"
        app:cornerRadius="20dp"
        app:strokeColor="@color/design_default_color_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.871" />

</androidx.constraintlayout.widget.ConstraintLayout>